Cambios en estilos visuales

--- a/index.html
+++ b/index.html
@@ -11,26 +11,33 @@
     <div class="timeline">
         <div class="event left">
             <h2>1988</h2>
-            <p>Evento importante en el año 2000.</p>
-            <p class="details">Detalles adicionales sobre el evento, impacto y contexto histórico.</p>
+            <img src="https://www.ecartelera.com/images/noticias/75400/75480-h3.jpg" alt="Descripción de la imagen 1988" class="event-img">
+            <p>Wide Area Information Servers (WAIS).</p>
+            <p class="details">
+                WAIS, desarrollado por Thinking Machines Inc., permitía búsquedas avanzadas en servidores distribuidos, pero fue reemplazado por la web.
+            </p>
         </div>
         <div class="event right">
             <h2>2005</h2>
+            <img src="ruta/de/tu/imagen2.jpg" alt="Descripción de la imagen 2005" class="event-img">
             <p>Otro evento relevante en 2005.</p>
             <p class="details">Explicación más profunda sobre los sucesos ocurridos en este año.</p>
         </div>
         <div class="event left">
             <h2>2010</h2>
+            <img src="ruta/de/tu/imagen3.jpg" alt="Descripción de la imagen 2010" class="event-img">
             <p>Algo sucedió en 2010.</p>
             <p class="details">Descripción más detallada del evento, personajes involucrados y consecuencias.</p>
         </div>
         <div class="event right">
             <h2>2015</h2>
+            <img src="ruta/de/tu/imagen4.jpg" alt="Descripción de la imagen 2015" class="event-img">
             <p>Un evento clave en 2015.</p>
             <p class="details">Efectos a largo plazo y relevancia en la historia reciente.</p>
         </div>
         <div class="event left">
             <h2>2020</h2>
+            <img src="ruta/de/tu/imagen5.jpg" alt="Descripción de la imagen 2020" class="event-img">
             <p>Último evento registrado.</p>
             <p class="details">Impacto global y cambios sociales derivados de este acontecimiento.</p>
         </div>
