Cambio en el fondo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <img src="https://cdn-icons-png.flaticon.com/512/10254/10254207.png" alt="Tim Berners-Lee" class="event-img">
             </div>
             <p>Tim Berners-Lee ideó la World Wide Web.</p>
-            <p class="details">Hizo una propuesta llamada "Gestión de la Información, una Propuesta" en donde describía cómo organizar documentos científicos definiendo lo que sería la web junto con versiones tempranas de HTTP y HTML.</p>
+            <p class="details">Hizo una propuesta llamada "Gestión de la Información, una Propuesta" En donde describía cómo organizar documentos científicos definiendo lo que sería la web junto con versiones tempranas de HTTP y HTML.</p>
         </article>
 
         <!-- 1990 -->
